@@ -2787,6 +2787,20 @@ command to generate the output files.
     <glob pattern="*.tar.lzo"/>
     <glob pattern="*.tzo"/>
   </mime-type>
+  <mime-type type="application/x-xz">
+    <_comment>XZ archive</_comment>
+    <generic-icon name="package-x-generic"/>
+    <magic priority="50">
+      <match type="string" value="\xfd\x37\x7a\x58\x5a\x00" offset="0"/>
+    </magic>
+    <glob pattern="*.xz"/>
+  </mime-type>
+  <mime-type type="application/x-xz-compressed-tar">
+    <_comment>Tar archive (XZ-compressed)</_comment>
+    <generic-icon name="package-x-generic"/>
+    <glob pattern="*.tar.xz"/>
+    <glob pattern="*.txz"/>
+  </mime-type>
   <mime-type type="application/x-ustar">
     <_comment>Ustar archive</_comment>
     <generic-icon name="package-x-generic"/>
